# google_integration

./: .gitignore  GOOGLE_INTEGRATION.md  PROMPT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: exceptions.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  departments.py  meetings.py  router.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  meeting.py
backend/app/schemas/: meeting.py  user.py
backend/app/services/: google_service.py  meeting_service.py  notification_service.py
backend/tests/: conftest.py  test_google_service.py  test_meetings.py
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/calendar/: CalendarView.tsx  FilterBar.tsx  MeetingCard.tsx
frontend/src/components/layout/: Sidebar.tsx  TopHeader.tsx
frontend/src/components/meeting/: CreateMeetingModal.tsx  MeetingDetailsModal.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: InterviewCalendar.tsx
frontend/src/types/: index.ts
